Added color palletes

--- a/circular-runner-double-jump/index.html
+++ b/circular-runner-double-jump/index.html
@@ -14,24 +14,30 @@
         // constants
         const WIDTH = 800;
         const HEIGHT = 600;
-        const COLORS = [0x2C363F, 0xE75A7C, 0xF2F5EA, 0xD6DBD2, 0xBBC7A4];
+        const COLOR = {
+            gunmetal: 0x2C363F,
+            darkpink: 0xE75A7C,
+            isabelline: 0xF2F5EA,
+            timberwolf: 0xD6DBD2,
+            darkvanilla: 0xBBC7A4,
+        };
         const FONTSTYLE = {
             fontSize: 14,
             fontFamily: "\"Courier New\", Courier, monospace",
-            fill: COLORS[3]
+            fill: COLOR.timberwolf,
         };
         
         // create application
         const app = new PIXI.Application(WIDTH, HEIGHT, {
-            backgroundColor: COLORS[0],
+            backgroundColor: COLOR.gunmetal,
             antialias: true
         });
         document.body.appendChild(app.view);
 
         // add tip
         const tip = new PIXI.Text(
-            'Click to jump (double) and ' +
-            'use arrows UP and DOWN to change the number of slices:',
+            'CLICK to jump (double) and ' +
+            'use ARROWS (⇧ ⇩) to change the number of slices:',
             FONTSTYLE
         );
         app.stage.addChild(tip);
@@ -50,14 +56,14 @@
         // add circle 1
         const circle1 = new PIXI.Graphics();
         app.stage.addChild(circle1);
-        circle1.beginFill(COLORS[2]);
+        circle1.beginFill(COLOR.isabelline);
         circle1.drawCircle(0, 0, radius1);
         circle1.position.set(WIDTH / 2, HEIGHT / 2);
 
         // add circle 2
         const circle2 = new PIXI.Graphics();
         app.stage.addChild(circle2);
-        circle2.beginFill(COLORS[1]);
+        circle2.beginFill(COLOR.darkpink);
         circle2.drawCircle(0, 0, radius2);
         circle2.position.set(WIDTH / 2, HEIGHT / 2, - (radius1 + radius2));
 
@@ -75,7 +81,7 @@
                 radius1 = Math.max(radius1 - 1, 80);
             }
             circle1.clear();
-            circle1.beginFill(COLORS[2]);
+            circle1.beginFill(COLOR.isabelline);
             circle1.drawCircle(0, 0, radius1);
         }
 
@@ -92,7 +98,7 @@
             }
 
             // update circle2 position
-            let distanceFromCenter = (radius1 + radius2) + jumpOffset;
+            const distanceFromCenter = (radius1 + radius2) + jumpOffset;
             currentRadians += playerSpeed;
             circle2.position.set(
                 WIDTH / 2 + distanceFromCenter * Math.cos(currentRadians),
