--- a/phyllotaxis/index.html
+++ b/phyllotaxis/index.html
@@ -11,12 +11,26 @@
 <body>
     <script type="text/javascript">
 
-        // convert degrees to radians
+        // constants
+        const WIDTH = 800;
+        const HEIGHT = 600;
+        const COLOR = {
+            gunmetal: 0x2C363F,
+            darkpink: 0xE75A7C,
+            isabelline: 0xF2F5EA,
+            timberwolf: 0xD6DBD2,
+            darkvanilla: 0xBBC7A4,
+        };
+        const FONTSTYLE = {
+            fontSize: 14,
+            fontFamily: "\"Courier New\", Courier, monospace",
+            fill: COLOR.timberwolf,
+        };
         const DEG2RAD = Math.PI / 180;
 
         // create application
-        const app = new PIXI.Application({
-            backgroundColor: 0x999999,
+        const app = new PIXI.Application(WIDTH, HEIGHT, {
+            backgroundColor: COLOR.gunmetal,
             antialias: true
         });
         document.body.appendChild(app.view);
@@ -55,7 +69,7 @@
             const radius = c - n * 0.005;
             if (radius > 0) {
                 // draw a circle
-                graphics.beginFill(0);
+                graphics.beginFill(COLOR.isabelline);
                 graphics.drawCircle(x, y, radius);
 
                 // increase n
