Updated color schema and updated folders and names

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </nav>
         <article class="main-content">
             <h1>Loading&hellip;</h1>
+            <h2>Subtitle</h2>
             <div class="example-frame">
                 <div class="sizer" id="example">
                     <iframe id="preview" src="blank.html"></iframe>
