--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Playground</title>
-		<meta name="description" content="Playground">
-		<meta name="format-detection" content="telephone-no">
+		<title>Coding 2D Cookbook</title>
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, minimal-ui">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="format-detection" content="telephone=no">
         <link rel="stylesheet" href="vendor/codemirror/codemirror.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
